--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#firebase
+/firestore.rules
+/firebase.json
+/firestore.indexes.json
+/.firebaserc
+/.firebase
+/functions
